# NETAI-Network-Anomaly-Detection-Models

./: .gitignore  Dockerfile  Dockerfile.training  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
checkpoints/: autoencoder_best.pt  lstm_best.pt  transformer_best.pt
configs/: autoencoder.yaml  default.yaml  lstm.yaml  transformer.yaml
data/: network_telemetry.db
k8s/: configmap.yaml  deployment-inference.yaml  job-training.yaml  namespace.yaml  service-inference.yaml
outputs/autoencoder/: evaluation_results.json  training_results.json
outputs/lstm/: evaluation_results.json  training_results.json
outputs/transformer/: evaluation_results.json  training_results.json
scripts/: evaluate.py  generate_data.py  serve.py  train.py
src/netai_anomaly/: __init__.py
src/netai_anomaly/data/: dataset.py  features.py  generator.py  schema.py
src/netai_anomaly/evaluation/: metrics.py  visualize.py
src/netai_anomaly/inference/: service.py
src/netai_anomaly/models/: autoencoder.py  base.py  lstm.py  transformer.py
src/netai_anomaly/training/: trainer.py  utils.py
src/netai_anomaly/utils/: config.py
tests/: conftest.py  test_data.py  test_features.py  test_inference.py  test_models.py  test_training.py
